force-app/main/default/objects/Financial_Summary_Calculation__e/Financial_Summary_Calculation__e.object-meta.xml
<CustomObject>
    <description>Financial Summary calculation result</description>
    <label>Financial Summary Calculation</label>
    <pluralLabel>Financial Summary Calculations</pluralLabel>
</CustomObject>