force-app/main/default/objects/Financial_Summary_Calculation__e/fields/Error_Description__c.field-meta.xml
<CustomField>
    <fullName>Error_Description__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>It will show the actual description in case of error.</description>
    <label>Error Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>