force-app/main/default/objects/Financial_Summary_Calculation__e/fields/Last_Calculated_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Calculated_Time__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>Last  summary calculated time</description>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <label>Last  Calculated Time</label>
    <type>DateTime</type>
</CustomField>