force-app/main/default/objects/Financial_Summary_Calculation__e/fields/Response_Id__c.field-meta.xml
<CustomField>
    <fullName>Response_Id__c</fullName>
    <description>Platform Event Response Id</description>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAP</complianceGroup>
    <label>Response Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>