force-app/main/default/objects/Financial_Summary_Calculation__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>It can be either &quot;Success&quot; or &quot;Error&quot;.</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>