force-app/main/default/objects/Financial_Summary_Calculation__e/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAP</complianceGroup>
    <description>Calculation summary</description>
    <label>Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField> 