force-app/main/default/objects/Financial_Summary_Calculation__e/fields/Summary_Type__c.field-meta.xml
<CustomField>
    <fullName>Summary_Type__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAP</complianceGroup>
    <description>Type of summary result</description>
    <label>Summary Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>